--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
 <div class="introduçao">
     <div class="introduçao-conteudo">
 
-<h1>Bicicletas feitas sob medida.</h1>
+<h1>Bicicletas feitas sob medida <span>.</span>   </h1>
 <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
 <a href="./bicicletas.html">ESCOLHA A SUA</a>
 </div>
+
+<div class="introduçao-imagem">
+
 <img src="/img/fotos/introducao.jpg" alt="">
 
-
+</div>
 </div>
 
 
